--- a/src/main/resources/templates/uploadForm.html
+++ b/src/main/resources/templates/uploadForm.html
@@ -18,7 +18,7 @@
 <div>
     <ul>
         <li th:each="file : ${files}">
-            <a th:text="${file.toString()}" />
+            <div th:text="${file.toString()}" />
         </li>
     </ul>
 </div>
