--- a/src/main/resources/templates/account-settings.html
+++ b/src/main/resources/templates/account-settings.html
@@ -61,6 +61,11 @@
     <!--[if lt IE 10]>
     <div class="page-message" role="alert">You are using an <strong>outdated</strong> browser. Please <a class="alert-link" href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</div>
     <![endif]-->
+
+    <div th:if="${message}" class="page-message" role="alert">
+        <span th:text="${message}"></span><a href="#" class="btn btn-sm btn-icon btn-warning ml-1" aria-label="Close" onclick="$(this).parent().fadeOut()"><span aria-hidden="true"><i class="fa fa-times"></i></span></a>
+    </div>
+
     <!-- .app-header -->
     <header class="app-header app-header-dark">
         <!-- .top-bar -->
@@ -234,10 +239,10 @@
                     </ul><!-- /.nav -->
                     <!-- .btn-account -->
                     <div class="dropdown d-flex">
-                        <button class="btn-account d-none d-md-flex" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="user-avatar user-avatar-md"><img src="assets/images/avatars/profile.jpg" alt=""></span> <span class="account-summary pr-lg-4 d-none d-lg-block"><span class="account-name">Beni Arisandi</span> <span class="account-description">Marketing Manager</span></span></button> <!-- .dropdown-menu -->
+                        <button class="btn-account d-none d-md-flex" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="user-avatar user-avatar-md"><img src="assets/images/avatars/account.jpg" alt=""></span> <span class="account-summary pr-lg-4 d-none d-lg-block"><span class="account-name">Beni Arisandi</span> <span class="account-description">Marketing Manager</span></span></button> <!-- .dropdown-menu -->
                         <div class="dropdown-menu">
                             <div class="dropdown-arrow ml-3"></div>
-                            <h6 class="dropdown-header d-none d-md-block d-lg-none"> Beni Arisandi </h6><a class="dropdown-item" href="user-profile.html"><span class="dropdown-icon oi oi-person"></span> Profile</a> <a class="dropdown-item" th:href="@{/logout}"><span class="dropdown-icon oi oi-account-logout"></span> Logout</a>
+                            <h6 class="dropdown-header d-none d-md-block d-lg-none"> Beni Arisandi </h6><a class="dropdown-item" href="user-account.html"><span class="dropdown-icon oi oi-person"></span> Account</a> <a class="dropdown-item" th:href="@{/logout}"><span class="dropdown-icon oi oi-account-logout"></span> Logout</a>
                             <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Help Center</a> <a class="dropdown-item" href="#">Ask Forum</a> <a class="dropdown-item" href="#">Keyboard Shortcuts</a>
                         </div><!-- /.dropdown-menu -->
                     </div><!-- /.btn-account -->
@@ -252,12 +257,12 @@
             <!-- .aside-header -->
             <header class="aside-header d-block d-md-none">
                 <!-- .btn-account -->
-                <button class="btn-account" type="button" data-toggle="collapse" data-target="#dropdown-aside"><span class="user-avatar user-avatar-lg"><img src="assets/images/avatars/profile.jpg" alt=""></span> <span class="account-icon"><span class="fa fa-caret-down fa-lg"></span></span> <span class="account-summary"><span class="account-name">Beni Arisandi</span> <span class="account-description">Marketing Manager</span></span></button> <!-- /.btn-account -->
+                <button class="btn-account" type="button" data-toggle="collapse" data-target="#dropdown-aside"><span class="user-avatar user-avatar-lg"><img src="assets/images/avatars/account.jpg" alt=""></span> <span class="account-icon"><span class="fa fa-caret-down fa-lg"></span></span> <span class="account-summary"><span class="account-name">Beni Arisandi</span> <span class="account-description">Marketing Manager</span></span></button> <!-- /.btn-account -->
                 <!-- .dropdown-aside -->
                 <div id="dropdown-aside" class="dropdown-aside collapse">
                     <!-- dropdown-items -->
                     <div class="pb-3">
-                        <a class="dropdown-item" href="user-profile.html"><span class="dropdown-icon oi oi-person"></span> Profile</a> <a class="dropdown-item" th:href="@{/logout}"><span class="dropdown-icon oi oi-account-logout"></span> Logout</a>
+                        <a class="dropdown-item" href="user-account.html"><span class="dropdown-icon oi oi-person"></span> Account</a> <a class="dropdown-item" th:href="@{/logout}"><span class="dropdown-icon oi oi-account-logout"></span> Logout</a>
                         <div class="dropdown-divider"></div><a class="dropdown-item" href="#">Help Center</a> <a class="dropdown-item" href="#">Ask Forum</a> <a class="dropdown-item" href="#">Keyboard Shortcuts</a>
                     </div><!-- /dropdown-items -->
                 </div><!-- /.dropdown-aside -->
@@ -282,7 +287,7 @@
                         </li><!-- /.menu-item -->
                         <!-- .menu-item -->
                         <li class="menu-item">
-                            <a th:href="@{/account-settings}" class="menu-link"><span class="menu-icon oi oi-person"></span> <span class="menu-text">Settings</span></a>
+                            <a href="#" class="menu-link"><span class="menu-icon oi oi-person"></span> <span class="menu-text">Settings</span></a>
                         </li><!-- /.menu-item -->
                     </ul><!-- /.menu -->
                 </nav><!-- /.stacked-menu -->
@@ -303,108 +308,71 @@
                 <div class="page-inner">
                     <!-- .page-section -->
                     <div class="page-section">
-                        <!-- .section-block -->
-                        <div class="section-block">
-                            <!-- metric row -->
-                            <div class="metric-row">
-                                <div class="col-lg-12">
-                                    <div class="metric-row metric-flush">
-                                        <!-- metric column -->
-                                        <div class="col">
-                                            <!-- .metric -->
-                                            <a href="user-teams.html" class="metric metric-bordered align-items-center">
-                                                <h2 class="metric-label"> Storage </h2>
-                                                <p class="metric-value h3">
-                                                    <sub><i class="oi oi-people"></i></sub> <span class="value">8</span>
-                                                </p>
-                                            </a> <!-- /.metric -->
-                                        </div><!-- /metric column -->
-                                        <!-- metric column -->
-                                        <div class="col">
-                                            <!-- .metric -->
-                                            <a href="user-projects.html" class="metric metric-bordered align-items-center">
-                                                <h2 class="metric-label"> Files </h2>
-                                                <p class="metric-value h3">
-                                                    <sub><i class="oi oi-fork"></i></sub> <span class="value">12</span>
-                                                </p>
-                                            </a> <!-- /.metric -->
-                                        </div><!-- /metric column -->
-                                        <!-- metric column -->
-                                        <div class="col">
-                                            <!-- .metric -->
-                                            <a href="user-tasks.html" class="metric metric-bordered align-items-center">
-                                                <h2 class="metric-label"> Downloads </h2>
-                                                <p class="metric-value h3">
-                                                    <sub><i class="fa fa-tasks"></i></sub> <span class="value">64</span>
-                                                </p>
-                                            </a> <!-- /.metric -->
-                                        </div><!-- /metric column -->
-                                    </div>
-                                </div><!-- metric column -->
-                            </div><!-- /metric row -->
-                        </div><!-- /.section-block -->
-                    </div><!-- /.page-section -->
-                    <!-- .page-section -->
-                    <div class="page-section">
-                        <!-- .section-block -->
-                        <div class="section-block">
-                            <header class="page-title-bar">
-                                <p class="lead">
-                                    <span>Recent uploads</span>
-                                </p>
-                            </header>
-
-
-                            <div class="row">
-                                <div th:each="userFile : ${userFiles}" th:id="${userFile.getId()} + '-card'" class="col" style="max-width: 320px; min-width: 320px">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <h3 th:text="${userFile.getOriginalFilename()}" class="card-title"></h3>
-                                            <p class="card-text">
-                                                Size: - <br>
-                                                Downloads: <strong th:text="${userFile.getDownloadCount()}"></strong> <br>
-                                                Uploaded: <strong th:text="${userFile.getUploaded()}"></strong> <br>
-                                                Last Download: <strong th:text="${userFile.getLastDownload()}"></strong> <br>
-                                            </p>
-
+                        <div class="row">
+                            <div class="col col-lg-6 col-md-8 xs-12">
+                                <div class="card card-fluid">
+                                    <h6 class="card-header"> Account Settings </h6><!-- .card-body -->
+                                    <div class="card-body">
+                                        <!-- form -->
+                                        <form id="update-form" action="#" th:object="${accountUpdateForm}" th:action="@{/account-settings}" method="post">
+                                            <!-- .form-group -->
+                                            <div class="form-group">
+                                                <label for="email-input">Email</label>
+                                                <input th:field="*{email}" readonly type="email" class="form-control text-muted" id="email-input" value="bent10@looper.com" required="">
+                                            </div><!-- /.form-group -->
+                                            <!-- .form-group -->
+                                            <div class="form-group">
+                                                <label for="username-input">Username</label>
+                                                <input readonly th:unless="${#fields.hasErrors('{username}')}" th:field="*{username}" type="text" class="form-control text-muted" id="username-input">
+                                                <input readonly th:if="${#fields.hasErrors('{username}')}" th:field="*{username}" type="text" class="form-control is-invalid" id="username-input">
+                                                <div class="invalid-feedback" >
+                                                    <i class="fa fa-exclamation-circle fa-fw"></i>
+                                                    <span th:errors="*{username}">Username error</span>
+                                                </div>
+                                            </div><!-- /.form-group -->
+                                            <!-- .form-group -->
+                                            <div class="form-group">
+                                                <label for="password-current-input">New Password</label>
+                                                <input th:unless="${#fields.hasErrors('{newPassword}')}" th:field="*{newPassword}" type="password" class="form-control" id="password-input">
+                                                <input th:if="${#fields.hasErrors('{newPassword}')}" th:field="*{newPassword}" type="password" class="form-control is-invalid" id="password-input">
+                                                <div id="password-input-feedback" class="invalid-feedback" >
+                                                    <i class="fa fa-exclamation-circle fa-fw"></i>
+                                                    <span id="password-input-feedback-message" th:errors="*{newPassword}">Username error</span>
+                                                </div>
+                                            </div>
+                                            <!-- .form-group -->
+                                            <div class="form-group">
+                                                <label for="password-confirm-input">Confirm Password</label>
+                                                <input disabled type="password" class="form-control" id="password-confirm-input">
+                                                <div class="invalid-feedback" >
+                                                    <i class="fa fa-exclamation-circle fa-fw"></i>
+                                                    <span>Password and confirm password does not match.</span>
+                                                </div>
+                                            </div><!-- /.form-group --><!-- /.form-group -->
                                             <hr>
+                                            <!-- .form-actions -->
+                                            <div class="row">
+                                                <div class="col">
+                                                <!-- enable submit btn when user type their current password -->
+                                                <input th:unless="${#fields.hasErrors('{currentPassword}')}" th:field="*{currentPassword}" type="password" class="form-control mr-3" id="password-current-input" placeholder="Enter Current Password" required>
+                                                <input th:if="${#fields.hasErrors('{currentPassword}')}" th:field="*{currentPassword}" type="password" class="form-control mr-3 is-invalid" id="password-current-input" placeholder="Enter Current Password" required>
+                                                    <div class="invalid-feedback" >
+                                                        <i class="fa fa-exclamation-circle fa-fw"></i>
+                                                        <span th:errors="*{currentPassword}"></span>
+                                                    </div>
+                                                </div>
+                                                
+                                                <div class="col-auto">
+                                                    <button disabled id="update-btn" type="button" onclick="submitUpdate()" class="btn btn-primary text-nowrap ml-auto">Update</button>
+                                                </div>
 
-                                            <div th:if="${userFile.getUrlId() == null}">
-                                                <strong hidden th:id="${userFile.getId()} + '-url-string'"></strong>
+                                            </div><!-- /.form-actions -->
 
-                                                <hr hidden th:id="${userFile.getId()} + '-url-hr-tag'">
-
-                                                <button th:id="${userFile.getId()} + '-url-generate-btn'" th:attr="onclick=|generateFileURL('${userFile.getId()}')|" class="btn btn-info">Generate URL</button>
-                                                <button th:id="${userFile.getId()} + '-file-delete-btn'" th:attr="onclick=|deleteFile('${userFile.getId()}')|" class="btn btn-danger">Delete File</button>
-
-                                            </div>
-
-                                            <div th:if = "${userFile.getUrlId() != null}">
-                                                <strong th:id="${userFile.getId()} + '-url-string'" th:text="${userFile.getUrl()}"></strong>
-
-                                                <hr th:id="${userFile.getId()} + '-url-hr-tag'">
-
-                                                <button th:id="${userFile.getId()} + '-url-copy-btn'" th:attr="onclick=|copyTextToClipboard('${userFile.getUrl()}')|" class="btn btn-info">Copy URL</button>
-                                                <button th:id="${userFile.getId()} + '-url-remove-btn'" th:attr="onclick=|removeFileURL('${userFile.getId()}')|" class="btn btn-warning">Remove URL</button>
-
-                                            </div>
-
-
-                                        </div>
-
-                                    </div>
+                                        </form><!-- /form -->
+                                    </div><!-- /.card-body -->
                                 </div>
                             </div>
-                        </div><!-- /.section-block -->
-                        <!-- .section-block -->
-                        <div class="section-block">
-                            <header class="page-title-bar">
-                                <p class="lead">
-                                    <span>Most Downloaded</span>
-                                </p>
-                            </header>
-                            Cards go here
-                        </div><!-- /.section-block -->
+                        </div>
                     </div><!-- /.page-section -->
                 </div><!-- /.page-inner -->
             </div><!-- /.page -->
@@ -444,6 +412,6 @@
 <!-- BEGIN THEME JS -->
 <script src="assets/javascript/theme.min.js"></script> <!-- END THEME JS -->
 <!-- BEGIN PAGE LEVEL JS -->
-<script src="assets/javascript/pages/home.js"></script> <!-- END PAGE LEVEL JS -->
+<script src="assets/javascript/pages/account-settings.js"></script> <!-- END PAGE LEVEL JS -->
 </body>
 </html>
