--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -81,7 +81,7 @@
     <div class="form-group">
       <div class="form-label-group">
         <input th:unless="${#fields.hasErrors('email')}"  th:field="*{email}" type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-        <input th:if="${#fields.hasErrors('email')}" th:field="*{email}" type="email" id="inputEmailError" class="form-control is-invalid" placeholder="Email" required autofocus>
+        <input th:if="${#fields.hasErrors('email')}" th:field="*{email}" type="email" id="inputEmail" class="form-control is-invalid" placeholder="Email" required autofocus>
         <label for="inputEmail">Email</label>
         <div class="invalid-feedback" >
           <i class="fa fa-exclamation-circle fa-fw"></i>
@@ -94,7 +94,7 @@
     <div class="form-group">
       <div class="form-label-group">
         <input th:unless="${#fields.hasErrors('username')}" th:field="*{username}" type="text" id="inputUser" class="form-control" placeholder="Username" required>
-        <input th:if="${#fields.hasErrors('username')}" th:field="*{username}" type="text" id="inputUserError" class="form-control is-invalid" placeholder="Username" required>
+        <input th:if="${#fields.hasErrors('username')}" th:field="*{username}" type="text" id="inputUser" class="form-control is-invalid" placeholder="Username" required>
         <label for="inputUser">Username</label>
         <div class="invalid-feedback" >
           <i class="fa fa-exclamation-circle fa-fw"></i>
@@ -108,7 +108,7 @@
     <div class="form-group">
       <div class="form-label-group">
         <input th:unless="${#fields.hasErrors('password')}" th:field="*{password}" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <input th:if="${#fields.hasErrors('password')}" th:field="*{password}" type="password" id="inputPasswordError" class="form-control is-invalid" placeholder="Password" required>
+        <input th:if="${#fields.hasErrors('password')}" th:field="*{password}" type="password" id="inputPassword" class="form-control is-invalid" placeholder="Password" required>
         <label for="inputPassword">Password</label>
         <div class="invalid-feedback" >
           <i class="fa fa-exclamation-circle fa-fw"></i>
