--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -92,7 +92,7 @@
                         <div class="input-group input-group-search dropdown">
                             <div class="input-group-prepend">
                                 <span class="input-group-text"><span class="oi oi-magnifying-glass"></span></span>
-                            </div><input name="term" type="text" class="form-control" aria-label="Search" placeholder="Search">
+                            </div><input name="term" type="text" class="form-control" aria-label="Search" placeholder="Search"> <!-- .dropdown-menu -->
 
                         </div><!-- /.input-group -->
                     </form><!-- /.top-bar-search -->
@@ -246,52 +246,9 @@
                     <div class="page-section">
                         <!-- .section-block -->
                         <div class="section-block">
-                            <!-- metric row -->
-                            <div class="metric-row">
-                                <div class="col-lg-12">
-                                    <div class="metric-row metric-flush">
-                                        <!-- metric column -->
-                                        <div class="col">
-                                            <!-- .metric -->
-                                            <a href="user-teams.html" class="metric metric-bordered align-items-center">
-                                                <h2 class="metric-label"> Storage </h2>
-                                                <p class="metric-value h3">
-                                                    <sub><i class="oi oi-people"></i></sub> <span class="value">8</span>
-                                                </p>
-                                            </a> <!-- /.metric -->
-                                        </div><!-- /metric column -->
-                                        <!-- metric column -->
-                                        <div class="col">
-                                            <!-- .metric -->
-                                            <a href="user-projects.html" class="metric metric-bordered align-items-center">
-                                                <h2 class="metric-label"> Files </h2>
-                                                <p class="metric-value h3">
-                                                    <sub><i class="oi oi-fork"></i></sub> <span class="value">12</span>
-                                                </p>
-                                            </a> <!-- /.metric -->
-                                        </div><!-- /metric column -->
-                                        <!-- metric column -->
-                                        <div class="col">
-                                            <!-- .metric -->
-                                            <a href="user-tasks.html" class="metric metric-bordered align-items-center">
-                                                <h2 class="metric-label"> Downloads </h2>
-                                                <p class="metric-value h3">
-                                                    <sub><i class="fa fa-tasks"></i></sub> <span class="value">64</span>
-                                                </p>
-                                            </a> <!-- /.metric -->
-                                        </div><!-- /metric column -->
-                                    </div>
-                                </div><!-- metric column -->
-                            </div><!-- /metric row -->
-                        </div><!-- /.section-block -->
-                    </div><!-- /.page-section -->
-                    <!-- .page-section -->
-                    <div class="page-section">
-                        <!-- .section-block -->
-                        <div class="section-block">
                             <header class="page-title-bar">
                                 <p class="lead">
-                                    <span>Recent uploads</span>
+                                    <span>Search results</span>
                                 </p>
                             </header>
 
@@ -328,7 +285,6 @@
                                                 <button th:id="${userFile.getId()} + '-url-remove-btn'" th:attr="onclick=|removeFileURL('${userFile.getId()}')|" class="btn btn-warning">Remove URL</button>
 
                                             </div>
-
 
                                         </div>
 
@@ -384,6 +340,6 @@
 <!-- BEGIN THEME JS -->
 <script src="assets/javascript/theme.min.js"></script> <!-- END THEME JS -->
 <!-- BEGIN PAGE LEVEL JS -->
-<script src="assets/javascript/pages/home.js"></script> <!-- END PAGE LEVEL JS -->
+<!-- END PAGE LEVEL JS -->
 </body>
 </html>
