--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -296,7 +296,7 @@
                             <header class="page-title-bar">
                                 <div class="d-flex flex-column flex-md-row">
                                     <p class="lead">
-                                        <span class="font-weight-bold">My Files</span>
+                                        <span>My Files</span>
                                     </p>
                                     <form id="dropdown-sort" method="GET" action="#" th:action="@{files}" class="ml-auto">
                                         <div class="row">
@@ -382,71 +382,14 @@
                                     </form>
                                 </div>
                             </header>
-
-                            <div class="row">
-                                <div th:each="userFile : ${userFiles}" th:id="${userFile.getId()} + '-card'" class="col"
-                                     style="max-width: 320px; min-width: 320px">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <h3 th:text="${userFile.getSerializedFilename()}" class="card-title"></h3>
-                                            <p class="card-text">
-                                                Size: - <br>
-                                                Downloads: <strong th:text="${userFile.getDownloadCount()}"></strong>
-                                                <br>
-                                                Uploaded: <strong th:text="${userFile.getUploaded()}"></strong> <br>
-                                                Last Download: <strong th:text="${userFile.getLastDownload()}"></strong>
-                                                <br>
-                                            </p>
-
-                                            <hr>
-
-                                            <div th:if="${userFile.getUrlId() == null}">
-                                                <strong hidden th:id="${userFile.getId()} + '-url-string'"></strong>
-
-                                                <hr hidden th:id="${userFile.getId()} + '-url-hr-tag'">
-
-                                                <button th:id="${userFile.getId()} + '-url-generate-btn'"
-                                                        th:attr="onclick=|generateFileURL('${userFile.getId()}')|"
-                                                        class="btn btn-info">Generate URL
-                                                </button>
-                                                <button th:id="${userFile.getId()} + '-file-delete-btn'"
-                                                        th:attr="onclick=|deleteFile('${userFile.getId()}')|"
-                                                        class="btn btn-danger">Delete File
-                                                </button>
-
-                                            </div>
-
-                                            <div th:if="${userFile.getUrlId() != null}">
-                                                <strong th:id="${userFile.getId()} + '-url-string'"
-                                                        th:text="${userFile.getUrl()}"></strong>
-
-                                                <hr th:id="${userFile.getId()} + '-url-hr-tag'">
-
-                                                <button th:id="${userFile.getId()} + '-url-copy-btn'"
-                                                        th:attr="onclick=|copyTextToClipboard('${userFile.getUrl()}')|"
-                                                        class="btn btn-info">Copy URL
-                                                </button>
-                                                <button th:id="${userFile.getId()} + '-url-remove-btn'"
-                                                        th:attr="onclick=|removeFileURL('${userFile.getId()}')|"
-                                                        class="btn btn-warning">Remove URL
-                                                </button>
-
-                                            </div>
-
-                                        </div>
-
-                                    </div>
-                                </div>
+                            <div class="file-container row">
+                            <!-- Auto load elements (infinite-scroll) -->
                             </div>
-                        </div><!-- /.section-block -->
-                        <!-- .section-block -->
-                        <div class="section-block">
-                            <header class="page-title-bar">
-                                <p class="lead">
-                                    <span>Most Downloaded</span>
-                                </p>
-                            </header>
-                            Cards go here
+
+                            <div class="page-load-status row justify-content-center">
+                                <p class="infinite-scroll-request">Loading...</p>
+                            </div>
+
                         </div><!-- /.section-block -->
                     </div><!-- /.page-section -->
                 </div><!-- /.page-inner -->
@@ -483,10 +426,12 @@
 <script src="assets/vendor/flatpickr/flatpickr.min.js"></script>
 <script src="assets/vendor/easy-pie-chart/jquery.easypiechart.min.js"></script>
 <script src="assets/vendor/chart.js/Chart.min.js"></script>
+<script src="assets/javascript/infinite-scroll.pkgd.min.js"></script>
+<script src="assets/javascript/pages/userfile-interface.js"></script>
 <!-- END PLUGINS JS -->
 <!-- BEGIN THEME JS -->
 <script src="assets/javascript/theme.min.js"></script> <!-- END THEME JS -->
 <!-- BEGIN PAGE LEVEL JS -->
-<script src="assets/javascript/pages/files.js"></script> <!-- END PAGE LEVEL JS -->
+<script src="assets/javascript/pages/files.js"></script><!-- END PAGE LEVEL JS -->
 </body>
 </html>
